--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header {
   border: 1px solid #000;
-  width: 500px;
+  width: 490px;
   height: 110px;
   padding: 5px;
 }
@@ -38,6 +38,10 @@ main {
   display: inline-block;
   outline: 1px solid #000;
   width: 100%;
+}
+
+.nav > li.active {
+  background-color: lightgray;
 }
 
 .todos {
